--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": "6.14.4",
+    "node": "10.16.0"
   }
 }
